--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: EpiCurve
 Type: Package
 Title: Plot an Epidemic Curve
-Version: 2.0-1
-Date: 2017-08-24
+Version: 2.2-1
+Date: 2019-09-09
 Authors@R: c(person("Jean Pierre", "Decorps", role = c("aut", "cre"),
                      email = "jp.decorps@epiconcept.fr"),
               person("Morgane","Vallee", role = "ctb", 
                 email = "m.vallee@epiconcept.fr")
               )
-Description: Creates simple or stacked epidemic curves for hourly, daily, weekly or monthly incomes data.
+Description: Creates simple or stacked epidemic curves for hourly, daily, weekly or monthly outcome data.
 License: LGPL-3
 Encoding: UTF-8
 LazyData: true
